Nuxt-Flask 1.1.3
