# backend/swagger.yaml
@@ -91,8 +91,8 @@ paths:
                   type: string
                   example: Taro
       responses:
-        '204':
-          description: No Content
+        '201':
+          description: Created
   /users/me:
     get:
       tags:
